--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -2443,7 +2443,7 @@ table .base.Completed td:not(.actions) {
     cursor: pointer;
 }
 
-table .base.Pending td {
+table .base.Running td {
     cursor: not-allowed;
 }
 
@@ -2490,7 +2490,7 @@ td.phase.Completed > span {
     background: #bcfbbc;
 }
 
-td.phase.Pending > span {
+td.phase.Running > span {
     color: #DE9826;
     background: #fbedc4;
 }
