fix: bug when rendering tooltips caused by jQuery and Vue dom manipulation conflicts

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -960,6 +960,12 @@ ul.zg-ul-select.active li.active:hover {
     margin-right: 10px;
 }
 
+#side .set svg {
+    height: 15px;
+    margin-top: 16px;
+    width: auto;
+}
+
 #sets > .hide {
     max-height: 60px;
     height: auto;
