fix: Move instance profiles selector to sidebar's first level

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -3198,7 +3198,7 @@ td.today.available {
 }
 
 .daterangepicker .calendar-table .next span, .daterangepicker .calendar-table .prev span {
-    border-color: #999;
+    border-color: #999 !important;
 }
 
 .daterangepicker .calendar-table, .daterangepicker td.off, .daterangepicker td.off.in-range, .daterangepicker td.off.start-date, .daterangepicker td.off.end-date {
